PharmaDemo/src/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>Account_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Account External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Brick</value>
            </filterItems>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>notEqual</operation>
                <value>TRUE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Appt__c</fullName>
        <formula>HYPERLINK(&quot;apex/callreport?type=Appointment&amp;locationid=&quot; &amp; Id , IMAGE(&quot;/img/icon/alarmClock16.gif&quot;,&quot;Create Location Appointment&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Time__c</fullName>
        <label>Best Time</label>
        <picklist>
            <picklistValues>
                <fullName>Monday - AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday - PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday - AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday - PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday - AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday - PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday - AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday - PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday - AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday - PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BrickId__c</fullName>
        <formula>Account__r.Brick__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BrickId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brick__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brick</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brick</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medical Professionals</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call__c</fullName>
        <formula>HYPERLINK(&quot;apex/callreport?type=1:1&amp;locationid=&quot; &amp; Id , IMAGE(&quot;/img/icon/cellPhone16.gif&quot;,&quot;Create Location Call Report&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Contact External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Location</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <formula>Contact__r.Last_Activity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <formula>Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Lecturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practitioner</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Contact__r.Spec__r.Id , Contact__r.Spec__r.Name , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speciality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>If( Account__r.Name = Contact__r.Account.Name ,&quot;Primary&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IF(Type__c=&apos;Primary&apos;,IMAGE(&quot;/img/icon/building16.gif&quot;,&quot;Primary&quot;),IMAGE(&quot;/img/icon/home16.gif&quot;,&quot;Secondary&quot;)),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>Gastric_Surgeons</fullName>
        <columns>View__c</columns>
        <columns>Appt__c</columns>
        <columns>Call__c</columns>
        <columns>Brick__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Speciality__c</columns>
        <columns>Best_Time__c</columns>
        <columns>Last_Activity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Speciality__c</field>
            <operation>contains</operation>
            <value>Gast</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </filters>
        <label>Gastric Surgeons</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Primary_Locations</fullName>
        <columns>View__c</columns>
        <columns>Appt__c</columns>
        <columns>Call__c</columns>
        <columns>Contact__c</columns>
        <columns>Best_Time__c</columns>
        <columns>Speciality__c</columns>
        <columns>Account__c</columns>
        <columns>Brick__c</columns>
        <columns>Last_Activity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Activity__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </filters>
        <label>Primary Locations</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>